letter spacing fix

--- a/site/themes/hermit/assets/scss/style.scss
+++ b/site/themes/hermit/assets/scss/style.scss
@@ -22,7 +22,7 @@
 html {
   background: $light-grey;
   line-height: 1.6;
-  letter-spacing: .06em;
+//  letter-spacing: .06em;
 }
 
 body,
